cleaning canvas2 after each click on canvas1 after canvas2 has already been clicked

--- a/bezier_derivative.html
+++ b/bezier_derivative.html
@@ -73,6 +73,9 @@
         	var circ = new Circle(e.x, e.y, 3).fill('navy');
 			circles.push(circ);
         	circ.addTo(stage);
+			intPoints = []
+			intCircles = []
+			intPaths = []
 		if(circles.length > 1){
 			var paths = []
 			for(var i=0;i<circles.length-1;i++){
